# jlpt-cli

./: Cargo.toml  README.md  config.yaml
src/: cli.rs  config.rs  main.rs  quiz.rs
